--- a/style.css
+++ b/style.css
@@ -1,3 +1,33 @@
 *{
 	padding: 0px;
 }
+
+.wrapper{
+
+	width: 630px;
+	background-color: black;
+	margin: 5px auto;
+	font-family: Times, serif;
+	color: white;
+	padding: 2px;
+}
+
+.wrapper p{
+	padding: 0px 0px 0px 5px;
+	margin-bottom: 10px;
+}
+
+
+.images{
+	display: inline-block;
+	margin: 0px auto;
+}
+
+.images img{
+	width: 300px;
+	height: 200px;
+	display: inline-block;
+	border: outset 2px; #4F6626;
+	margin-left: 7px;
+	margin-top: 3px;
+}
